styles/_pages.scss
/* HOME STYLINGS */
#home-purple {
  position: absolute;
  left: 0;
  top: -400px;
}

#home-green {
  position: absolute;
  right: -3px;
  top: 60px;
}

.sidelinks {
  &:hover {
    color: $blue-purple-400;
  }

  &.active {
    color: $blue-purple-400;
    font-weight: bold;
  }
}

.page-home {
  #home-hero-graphic {
    content: url("../img/home-hero.svg");
    margin-left: auto;
    width: 856px;
    margin-right: auto;
    margin-bottom: 24px;
    max-width: 100%;
  }

  #benefits-list {
    @each $benefit in "public", "streamlined", "performance", "low-cost",
    "community", "reliability"

      {
      ##{$benefit} {
        content: url("../img/icons/#{$benefit}.svg");
      }
    }
  }

  #advanced-features {
    $feature-cards: [ "pink-purple", "neutral-blue", "light-green", "orange", "purple-blue-2"];

    @for $i from 1 through 5 {
      .card:nth-child(#{$i}) .card-footer {
        background-image: url("../img/cards/3col-#{nth($feature-cards, $i)}.svg");
      }
    }
  }

  #get-started {
    $gs-cards: [ "orange-yellow", "magenta-orange", "purple-blue-green",
      "light-blue", "green-blue"];

    @for $i from 1 through 5 {
      .card:nth-child(#{$i}) .card-footer {
        background-image: url("../img/cards/3col-#{nth($gs-cards, $i)}.svg");
      }
    }
  }
}

.cta {
  position: absolute;

  &-top-left {
    top: 0;
    left: 0;
  }

  &-bottom-right {
    bottom: 0;
    right: 0;
  }
}

// Page backgrounds
.landing-bg {
  opacity: 0.6;

  @include media-breakpoint-up(md) {
    opacity: 1;
  }
}

.landing-builtin-bg {
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    // background-image set on the page-* classes
    background-repeat: no-repeat;
    background-position-x: left;
    background-position-y: top;
    opacity: 0.6;

    @include media-breakpoint-up(md) {
      opacity: 1;
    }
  }
}

// XRP Overview Page
#xrp-overview-blue {
  position: absolute;
  top: 0;
  left: 0;
}

#xrp-mark-overview {
  @include media-breakpoint-down(sm) {
    height: 40px;
    margin-top: 16px;
  }
}

#wallets {
  @each $wallet in "ledger", "secalot", "trezor", "xumm", "trust", "gatehub", "towo", "keystone", "dcent", "coin", "gem" {
    #wallet-#{$wallet} {
      content: url("../img/wallets/#{$wallet}.svg");
    }

    #wallet-bitfrost {
      content: url("../img/wallets/bitfrost.png");
    }
  }
}

#top-exchanges {
  // Vector logos
  @each $exchange in "bitstamp", "kraken", "cex-io", "liquid", "lmax",
  "bitfinex", "etoro"

    {
    #exch-#{$exchange} {
      content: url("../img/exchanges/#{$exchange}.svg");
    }
  }

  // Raster logos
  @each $exchange in "bittrex", "currency-com", "ftx" {
    #exch-#{$exchange} {
      content: url("../img/exchanges/#{$exchange}.png");
    }
  }
}

// XRPL Overview Page
#xrpl-overview-purple {
  position: absolute;
  top: 40px;
  left: 0;

  @include media-breakpoint-down(sm) {
    top: 0;
    left: -20vw;
  }
}

#xrpl-overview-orange {
  position: absolute;
  top: 80px;
  right: -4px;
}

#use-cases-orange {
  position: absolute;
  top: -480px;
  right: -4px;
}

#validator-graphic {
  content: url(../img/validators.svg);
}
/* ... */

